syntax = "proto3";

package proto;

option go_package = "./;proto";

message Order {
    uint32 id = 1;
    uint32 uid = 2;
    string product_id = 3;
    string product_name = 4;
    uint32 product_num = 5;
    uint32 coin_num = 6;
    string total_fee = 7;
    string currency = 8;
    string price_tier = 9;
    string trade_no = 10;
    uint32 trade_time = 11;
    uint32 channel_id = 12;
    string channel_order_no = 13;
    string pay_plat = 14;
    string extend = 15;
    uint32 create_time = 16;
    string bonus = 17;
    uint32 bonus_num = 18;
    uint32 vip_point_num = 19;
    string pay_type = 20;
    string pay_vendor = 21;
    string client_type = 22;
    string device = 23;
    string client_ip = 24;
}

message RechargeOrderNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10726;
    }

    Order order = 1;
}

message MarkOrderFinishedReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10718;
    }

    uint32 order_id = 1;
    uint32 finish_time = 2;
    bool is_retry = 3;
}

message MarkOrderFinishedRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10725;
    }

    int32 retcode = 1;
    uint32 order_id = 2;
}

message GetUnfinishedOrderReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10707;
    }
}

message GetUnfinishedOrderRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10702;
    }

    int32 retcode = 1;
    repeated Order order_list = 2;
}

message GetSpecificUnfinishedReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10731;
    }

    uint32 order_id = 1;
}

message GetSpecificUnfinishedRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10729;
    }

    int32 retcode = 1;
    Order order = 2;
}
