syntax = "proto3";

package proto_security;

option go_package = "./;proto";

enum Platform {
    Unkown = 0;
    IOS = 1;
    Android = 2;
    PC = 3;
    WEB = 4;
    WAP = 5;
    PS = 6;
    Nintendo = 7;
    CloudAndroid = 8;
    CloudPC = 9;
    CloudIOS = 10;
    PS5 = 11;
}

message GameLoginNotifyRequest {
    uint32 uid = 1;
    uint32 account_type = 2;
    string account = 3;
    uint32 platform = 4;
    string region = 5;
    string biz_game = 6;
}

message GameLogoutNotifyRequest {
    uint32 uid = 1;
    uint32 account_type = 2;
    string account = 3;
    uint32 platform = 4;
    string region = 5;
    string biz_game = 6;
}

message GameHeartBeatInfo {
    repeated uint32 uid = 1;
}

message GameHeartBeatNotifyRequest {
    map<uint32, GameHeartBeatInfo> platform_uid_list = 1;
    string region = 2;
    string biz_game = 3;
}
